# cardgame-api

./: .env  Dockerfile  README.md  docker-compose.yml  index.py  pyproject.toml  requirements.txt
app/: main.py
app/adapter/mongo/: connection.py  db.py
app/api/: index.py
app/api/api_v1/: response.py
app/api/api_v1/endpoints/: game.py  user.py
app/api/user/: index.py
app/model/: custom_schema.py
app/model/game/: function.py  model.py
app/model/score/: function.py  model.py
app/model/token/: function.py  model.py
app/model/user/: function.py  model.py
app/util/: config.py  error.py  index.py
